made metod addClass,removeClass,toogleClass,querySelectorAll($)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-<div class="wrapper">
+<div id="wrapper-id" class="wrapper">
     <ul class="list">
         <li class="item">1</li>
         <li class="item">2</li>
@@ -43,10 +43,10 @@
         <li class="item">5</li>
     </ul>
     <ul class="list-custom">
-        <li class="item-custom --active">1</li>
-        <li class="item-custom --active">2</li>
-        <li class="item-custom --active">3</li>
-        <li class="item-custom --active">4</li>
+        <li class="item-custom --active" data-item>1</li>
+        <li class="item-custom --active" data-item>2</li>
+        <li class="item-custom --active" data-item>3</li>
+        <li class="item-custom --active" data-item>4</li>
         <li class="item-custom --active">5</li>
         <li class="item-custom --active">6</li>
         <li class="item-custom --active">7</li>
