--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@
         .--active {
             background-color: blue;
         }
+
+        .--active-green {
+            background-color: green;
+        }
     </style>
 </head>
 <body>
 <div id="wrapper-id" class="wrapper">
     <ul class="list">
-        <li class="item">1</li>
+        <li id="item-1" class="item">1</li>
         <li class="item">2</li>
         <li class="item">3</li>
         <li class="item">4</li>
